# karma

./: README.md  index.md
contracts/: README.md
contracts/Stake/: Stake.cabal
contracts/Stake-old/: plutus-pioneer-program-week07.cabal
contracts/Stake-old/src/Week07/: Homework1.hs  Homework2.hs  Solution1.hs  Stake.hs
contracts/Stake/dist-newstyle/cache/: config
contracts/Stake/dist-newstyle/packagedb/ghc-8.10.7/: Stake-0.1.0.0-inplace.conf
contracts/Stake/dist-newstyle/src/: cardano-b_-c0de99f0ccd585cd.cache  cardano-l_-acad124fece29d34.cache  cardano-p_-98329c466570048a.cache  flat-64b673dc3eef5b9f.cache  goblins-7fe4f5e9bbbd1224.cache  hedgehog-_-d2bdd077e79afffb.cache  plutus-cedf2c31be8af9ac.cache
contracts/Stake/lib/: Simple.hs
contracts/airdrop-contract/: AirdropContract.hs  CHANGELOG.md
contracts/airdrop-contract/dist-newstyle/cache/: compiler  plan.json  source-hashes  up-to-date
contracts/airdrop-contract/dist-newstyle/packagedb/ghc-8.10.7/: package.cache
contracts/airdrop-contract/dist-newstyle/src/: Win32-net_-e9415802910225c6.cache  cardano-c_-94cfeccbf1aa3cf5.cache  cardano-n_-870b8b2b68d602a2.cache  iohk-moni_-c7ca6b005d6f76c5.cache  ouroboros_-268d3b2310e5b441.cache  purescrip_-884dcfbd0c5237ac.cache  servant-p_-59e990499b3e6a93.cache
docs/: CNAME  extended.json  index.html  index.md  poolMetaData.json
documentation/puml/: stake_contract.puml
