Cabal-Version:      2.4
Name:               karma-contract-stake
Version:            0.1.0.0
Author:              Valerio Mellini
Maintainer:          valerio.mellini@aliumind.com
Build-Type:          Simple
Copyright:           © 2021 Valerio Mellini
License:             Apache-2.0
License-files:       LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     src.EvenOdd
                     , Week07.RockPaperScissors
                     , Week07.TestRockPaperScissors
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , containers
                     , data-default
                     , freer-extras
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-tx-plugin
                     , plutus-tx
                     , plutus-use-cases
                     , prettyprinter
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise
